umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atoms_pu.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {:output {:atoms ["Pu#n#u6"] :bonds []} :success true}
  :counts {:output {:atoms ["Pu#n4"] :bonds []} :success true}}
