umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atoms_rh.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {:output {:atoms ["Rh#n3#u3"] :bonds []} :success true}
  :counts {:output {:atoms ["Rh#n4#u"] :bonds []} :success true}}
