umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atoms_ru.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {:atoms ["Ru#n2#u4"] :bonds [] :charge 0 :spin "#u4 #s5"}
    :success true}
  :counts {:output {:atoms ["Ru#n4"] :bonds [] :charge 0 :spin "#u0 #s1"} :success true}}
