umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atoms_sb.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {:atoms ["Sb#n#u3"] :bonds [] :charge 0 :spin "#u3 #s4"}
    :success true}
  :counts {
    :output {:atoms ["Sb#n2#u"] :bonds [] :charge 0 :spin "#u1 #s2"}
    :success true}}
